:art: Misc small design edits on the booking and contact pages. Nothing major, mostly small spacing issues and colors.

--- a/assets/src/sass/components/_forms.scss
+++ b/assets/src/sass/components/_forms.scss
@@ -33,8 +33,8 @@
     background-color: #ff9700;
     border-radius: 80px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    color: #000000;
-    font-weight: 800;
+    color: #ffffff;
+    font-weight: 500;
     padding: 0.5em 2em;
     transition: 0.3s;
     transition-timing-function: ease-in-out;
